# goviq

./: README.md  bill_links.txt  pyproject.toml  setup.py
config/scrapers/: parl_ca.py
goviq/: crawler_poc.py  utils.py
goviq.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
goviq/config/: local_cache.py
goviq/config/scrapers/: parl_ca.py
goviq/entities/: crawler.py  preprocessor.py
goviq/preprocessing/: acts_ca.py  parl_ca.py
goviq/scrapers/: acts_ca.py  parl_ca.py
goviq/tests/scrapers/: test_parl_ca.py
scrapers/: parl_ca.py
