[build-system]
requires = [
    "setuptools>=63.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "goviq"
version = "0.1.0"
description = "Application for scraping and preprocessing government documents for downstream analysis"
readme = "README.md"
authors = [
  { name = "Julian Whiting", email = "j2whitin@gmail.com" }
]
license = { text = "MIT" }  # or whichever license you use
keywords = ["scraping", "government", "crawler", "analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.6"

# Dependencies (equivalent to install_requires in setup.py)
dependencies = [
    "aiohttp==3.8.5",
    "beautifulsoup4==4.12.2",
    "regex",
    "requests==2.31.0",
    "tqdm"
]

# If you need to exclude certain packages (tests, docs) from distribution:
[tool.setuptools.packages]
find = { exclude = ["tests*", "docs*"] }

